--- a/app/index.html
+++ b/app/index.html
@@ -21,7 +21,7 @@
     <![endif]-->
 
     <!-- Add your site or application content here -->
-    <div class="header">
+    <!-- <div class="header">
       <div class="navbar navbar-default" role="navigation">
         <div class="container">
           <div class="navbar-header">
@@ -46,11 +46,11 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
-
+     <ui-view></ui-view>
+ 
     <div class="container">
-    <ui-view></ui-view>
     <div ng-view=""></div>
     </div>
 
